<resources>
    <string name="app_name">Scandroid</string>
    <string name="title_activity_scandroid">Scandroid</string>
    <string name="title_activity_select_interface">Interface Configuration</string>
    <string name="title_activity_vehicle_history">VehicleHistory</string>
    <string name="action_settings">Settings</string>
    <string name="yes_caps">YES</string>
    <string name="no_caps">NO</string>
    <string name="not_available">N/A</string>
    <string name="on_caps">ON</string>
    <string name="off_caps">OFF</string>
    <string name="touch_to_expand">Touch to expand…</string>
    <string name="supported_caps">SUPPORTED</string>
    <string name="unsupported_caps">UNSUPPORTED</string>
    <string name="short_term">short term</string>
    <string name="long_term">long term</string>
    <string name="short_term_fuel_trim_acronym">STFT</string>
    <string name="long_term_fuel_trim_acronym">LTFT</string>
    <string name="activity_protocol_search_instruction_label">Searching for the correct communication protocol, please wait or press back to cancel…</string>
    <string name="activity_protocol_search_failure_message">Communication could not be established with the
    vehicle.\n\n-Confirm that the key is in the \"ON\" position\n-Check the emissions label
    or vehicle service information to confirm that the vehicle is OBD equipped and compliant\n
    -Confirm that the external test equipment is securely connected to the vehicle diagnostic port
    \n\nRetry Attempt (%1$d)</string>
    <string name="activity_protocol_search_initializing_bus_label">Initializing bus (%1$s)</string>
    <string name="activity_protocol_search_available_protocols_label">Available Protocols:</string>
    <string name="activity_protocol_search_fatal_error_message">Protocol detection has failed with a fatal error (%1$s)\n\nGenerally this indicates a hardware / range  problem with the interpreter such as a poor physical connection or being too far away from the vehicle.</string>
    <string name="scandroid_menu_settings_item_title">Settings</string>
    <string name="scandroid_menu_logging_item_title">Logging</string>
    <string name="scandroid_instruction_label">Scandroid: The FREE scan-tool for Android!\n
        Select a function from the choices below to get started.</string>
    <string name="scandroid_generic_scanner_label">Scanner (Generic)</string>
    <string name="scandroid_expert_scanner_label">Scanner (Expert)</string>
    <string name="scandroid_vin_decoder_label">VIN Decoder</string>
    <string name="fragment_unsupported_service_message">This vehicle does not support this service.</string>
    <string name="fragment_reset_diagnostic_information_dialog_title">Confirm Action</string>
    <string name="fragment_reset_diagnostic_information_dialog_message">External test equipment is required to show a confirmation dialog before sending a service $04 request.\n\nDo you really want to reset all diagnostic information?</string>
    <string name="fragment_reset_diagnostic_information_dialog_positive_button_label">Send Request</string>
    <string name="fragment_reset_diagnostic_information_success">Diagnostic information has been reset</string>
    <string name="fragment_reset_diagnostic_information_failure">Failed to reset diagnostic information (%1$s)</string>
    <string name="fragment_reset_diagnostic_information_dialog_negative_button_label">Cancel</string>
    <string name="fragment_reset_diagnostic_information_intro_message">This service will reset all onboard diagnostics related information.  This is generally considered to be \'Clearing the Codes\', however that is not a very accurate naming of what is really going to happen.</string>
    <string name="fragment_reset_diagnostic_information_body_message">The following information will be erased:\n\n- Number of diagnostic trouble codes\n- Diagnostic trouble codes\n- Trouble code for freeze frame data\n- Freeze frame data\n- Status of system monitoring tests\n- On-board monitoring test results\n- Distance travelled while MIL is activated\n- Number of warm-ups since DTC cleared\n- Distance since diagnostic trouble codes cleared\n- Minutes run by the engine while MIL activated\n- Time since diagnostic trouble codes cleared\n- Other manufacturer specific \'clearing/resetting\' actions</string>
    <string name="fragment_reset_diagnostic_information_conclusion_message">It is conceivable that the vehicle may experience temporary driveability issues following this operation, as manufacturer specified adaptive strategies are also subject to erasing in some cases.  Resetting this information may also prevent a vehicle from passing an inspection in some states or provinces.  Depending on driving habits, it may take a very long time for the system to re-run all of its monitors.</string>
    <string name="fragment_reset_diagnostic_information_button_text">Reset Diagnostic Information</string>
    <string name="dialog_bridge_status_title">Bridge Status</string>
    <string name="dialog_bridge_status_dismiss_button_text">Dismiss</string>
    <string name="dialog_bridge_status_hardware_label">Hardware:</string>
    <string name="dialog_bridge_status_hardware_version_label">Version:</string>
    <string name="dialog_bridge_status_link_status_label">Link Status:</string>
    <string name="dialog_bridge_status_average_latency_label">Latency:</string>
    <string name="dialog_bridge_status_system_voltage_label">System Voltage:</string>
    <string name="dialog_bridge_status_refresh_button_text">Refresh</string>
    <string name="dialog_parameter_selector_title">Select Parameters</string>
    <string name="dialog_parameter_selector_positive_button_text">Select</string>
    <string name="dialog_parameter_selector_negative_button_text">Cancel</string>
    <string name="pid_support_expansion_title">PID Support [%1$s - %2$s] Expanded View</string>
    <string name="pid_support_expansion">%1$s</string>
    <string name="pid_monitor_status_expansion_title">Monitor Status Expanded View</string>
    <string name="pid_monitor_status_expansion">MIL Status: %1$s\nDTC Count: %2$s\n%3$s</string>
    <string name="pid_fuel_system_status_expansion_title">Fuel System Expanded View</string>
    <string name="pid_fuel_system_status_expansion">Fuel System 1: %1$s\nFuel System 2: %2$s</string>
    <string name="pid_support_desc_title">Support PID Overview</string>
    <string name="pid_support_desc">This PID requests support for the range of [%1$s - %2$s].
    Each of the 32 fields indicate whether or not the particular PID is supported by this
    vehicle.</string>
    <string name="pid_monitor_status_desc_title">Monitor Status PID Overview</string>
    <string name="pid_monitor_status_desc">This PID offers three distinct pieces of information.
    First, the status of the MIL (ON or OFF).  Second, the number of stored DTCs (these can be
    read with service $03).  Third, the status of both continuous and non-continuous monitors
    is provided.  The monitor statuses are represented with two fields each: SUP (support status
    [NO or YES]) and RDY (completion status [NO or YES]).\nYou can touch the PID to bring up a
    dialog that contains all of the information.</string>
    <string name="pid_dtc_that_caused_freeze_frame_desc_title">DTCFRZF PID Overview</string>
    <string name="pid_dtc_that_caused_freeze_frame_desc">This PID requests the DTC that caused
    frame data to be stored by one or more on-board modules.</string>
    <string name="pid_fuel_system_status_desc_title">FUELSYS PID Overview</string>
    <string name="pid_fuel_system_status_desc">This PID requests the loop status of the on-board
    fuel system(s).  Note that different systems do not necessarily refer to different fuel
    injector banks, but rather systems that change loop status independently.</string>
    <string name="pid_calculated_engine_load_desc_title">LOAD_PCT PID Overview</string>
    <string name="pid_calculated_engine_load_desc">This PID requests the calculated engine load
    of the vehicle.</string>
    <string name="pid_engine_coolant_temp_desc_title">ECT PID Overview</string>
    <string name="pid_engine_coolant_temp_desc">This PID requests the temperature of the engine
    coolant.  Note that diesel applications are permitted to substitute engine oil temperature
    for this value.</string>
    <string name="pid_fuel_trim_desc_title">Bank %1$d &amp; %2$d %3$s PID Overview</string>
    <string name="pid_fuel_trim_desc">This PID requests the %1$s fuel trim of injector banks
    %2$d and (if equipped) %3$d.  Note that if the vehicle does not utilize injector bank %4$d
    then the reported value shall be N/A.</string>
    <string name="pid_narrow_range_fuel_rail_pressure_ref_atmosphere_desc_title">FPR PID Overview</string>
    <string name="pid_narrow_range_fuel_rail_pressure_ref_atmosphere_desc">This PID requests the fuel rail
    pressure relative to atmospheric pressure.  This PID utilizes the narrow-range unit/scaling
    function and is generally used with spark ignition vehicles, whereas the wide-range version
    is generally used with compression ignition vehicles.</string>
    <string name="pid_manifold_absolute_pressure_desc_title">MAP PID Overview</string>
    <string name="pid_manifold_absolute_pressure_desc">This PID requests the absolute pressure of
    the intake manifold as derived from a MAP sensor.</string>
    <string name="pid_engine_speed_desc_title">RPM PID Overview</string>
    <string name="pid_engine_speed_desc">This PID requests the speed at which the engine is
    rotating.</string>
    <string name="pid_vehicle_speed_desc_title">VSS PID Overview</string>
    <string name="pid_vehicle_speed_desc">This PID requests the road speed of the vehicle.</string>
    <string name="pid_timing_advance_desc_title">SPARKADV PID Overview</string>
    <string name="pid_timing_advance_desc">This PID requests the electronic timing advance
    for cylinder #1.  This value does not include any mechanical timing advancement or
    retardation.</string>
    <string name="pid_intake_air_temperature_desc_title">IAT PID Overview</string>
    <string name="pid_intake_air_temperature_desc">This PID requests the temperature of the air
    within the intake manifold.  The value may be either obtained directly from an IAT sensor, or
    it can be interpolated by the control strategy based on other sensor inputs.</string>
    <string name="pid_mass_airflow_desc_title">MAF PID Overview</string>
    <string name="pid_mass_airflow_desc">This PID requests the mass of air entering the engine.
    </string>
    <string name="pid_absolute_throttle_position_desc_title">TP PID Overview</string>
    <string name="pid_absolute_throttle_position_desc" formatted = "false">This PID requests the
    absolute position of the throttle plate, which is a normalised value scaled from 0 - 100%.
    Usually closed throttle will range from ~10 - ~20% and wide open throttle will range from
    ~80 - ~95%</string>
    <string name="pid_secondary_air_status_desc_title">AIR_STAT PID Overview</string>
    <string name="pid_secondary_air_status_desc">This PID requests the status of the secondary
    air injection system.</string>
    <string name="pid_oxygen_sensor_location_desc_title">O2SLOC PID Overview</string>
    <string name="pid_oxygen_sensor_location_desc">This PID requests the locations of all oxygen
    sensors equipped on a %1$s exhaust system.</string>
    <string name="pid_conventional_oxygen_sensor_x_x_desc_title">O2S%1$d%2$d PID Overview</string>
    <string name="pid_conventional_oxygen_sensor_x_x_desc">This PID requests the output voltage
    and related short term fuel trim of O2S%1$d%2$d.</string>
    <string name="pid_obd_support_desc_title">OBDSUP PID Overview</string>
    <string name="pid_obd_support_desc">This PID requests the OBD requirements to which the
    vehicle was designed.</string>
</resources>