<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_bridge_status_hardware_label"
        android:id="@+id/dialog_bridge_status_hardware_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_bridge_status_hardware_version_label"
        android:id="@+id/dialog_bridge_status_hardware_version_label"
        android:layout_below="@+id/dialog_bridge_status_hardware_label"
        android:layout_alignParentStart="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_bridge_status_link_status_label"
        android:id="@+id/dialog_bridge_status_link_status_label"
        android:layout_below="@+id/dialog_bridge_status_hardware_version_label"
        android:layout_alignParentStart="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_bridge_status_average_latency_label"
        android:id="@+id/dialog_bridge_status_average_latency_label"
        android:layout_below="@+id/dialog_bridge_status_link_status_label"
        android:layout_alignParentStart="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_bridge_status_system_voltage_label"
        android:id="@+id/dialog_bridge_status_system_voltage_label"
        android:layout_below="@+id/dialog_bridge_status_average_latency_label"
        android:layout_alignParentStart="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:id="@+id/dialog_bridge_status_hardware"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/dialog_bridge_status_hardware_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:id="@+id/dialog_bridge_status_hardware_version"
        android:layout_below="@+id/dialog_bridge_status_hardware"
        android:layout_toRightOf="@+id/dialog_bridge_status_hardware_version_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:id="@+id/dialog_bridge_status_link_status"
        android:layout_toRightOf="@+id/dialog_bridge_status_link_status_label"
        android:layout_below="@+id/dialog_bridge_status_hardware_version"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:id="@+id/dialog_bridge_status_average_latency"
        android:layout_toRightOf="@+id/dialog_bridge_status_average_latency_label"
        android:layout_below="@+id/dialog_bridge_status_link_status"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:id="@+id/dialog_bridge_status_system_voltage"
        android:layout_below="@+id/dialog_bridge_status_average_latency"
        android:layout_toRightOf="@+id/dialog_bridge_status_system_voltage_label"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_bridge_status_refresh_button_text"
        android:id="@+id/dialog_bridge_status_refresh_button"
        android:layout_below="@+id/dialog_bridge_status_system_voltage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
</RelativeLayout>