<!-- This file is protected under the KILLGPL. -->
<!-- For more information, visit http://www.lukeleber.github.io/KILLGPL.html -->
<!-- -->
<!-- Copyright (c) Luke Leber <LukeLeber@gmail.com> -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.lukeleber.scandroid.gui.fragments.ResetDiagnosticInformation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_reset_diagnostic_information_intro_message"
                android:gravity="center_horizontal"
                android:id="@+id/wide_range_oxygen_sensor_lambda_value"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_reset_diagnostic_information_body_message"
                android:id="@+id/protocol_search_listview_item_protocol_textview"
                android:layout_gravity="center_horizontal|top"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_reset_diagnostic_information_conclusion_message"
                android:id="@+id/fuel_trim_value_1"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_reset_diagnostic_information_button_text"
                android:id="@+id/reset_diagnostic_information"
                android:layout_gravity="center_horizontal|bottom"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
